# SQLModel-CRUD-manager

./: .env.example  .gitignore  LICENSE  README.md  crud.py  pyproject.toml
.github/workflows/: linter.yml  testing.yml
sqlmodel_crud_manager/: crud.py  decorator.py
tests/: test_crud.py
